# Cpp_Tanks2

./: .gitignore  CMakeLists.txt  main.cpp  resources.qrc
Game/: game.cpp  game.h
Objects/Tank/: tank.cpp
Objects/Wall/: wall.cpp
Tests/: CMakeLists.txt
Tests/GameTestsSrc/: gametest.cpp  gametest.h  main.cpp
Utils/GameStorage/: gamestorage.cpp  gamestorage.h
Utils/ImagesManager/: imagesmanager.cpp  imagesmanager.h
Utils/JsonManager/: jsonmanager.cpp  jsonmanager.h
Widgets/ActionPanel/: actionpanel.cpp
Widgets/FieldSizeSelector/: fieldsizeselector.cpp  fieldsizeselector.h
Widgets/GameField/: gamefield.cpp  gamefield.h
Widgets/GameScreen/: gamescreen.cpp  gamescreen.h  gamescreencontroller.cpp  gamescreencontroller.h
Widgets/LevelMaker/: levelmaker.cpp  levelmaker.h  levelmakercontroller.cpp  levelmakercontroller.h
Widgets/MainMenu/: mainmenu.h
Widgets/ObjectPanel/: objectpanel.h
src/: NewFrameObjects.h  actionpanel.h  game.cpp  game.h  gamefield.h  gamescreen.cpp  gamescreen.h  gamescreencontroller.cpp  gamescreencontroller.h  gamestorage.h  imagesmanager.cpp  jsonmanager.cpp  jsonmanager.h  levelmaker.h  levelmakercontroller.cpp  levelmakercontroller.h  levelselector.cpp  levelselector.h  mainmenu.cpp  objectpanel.cpp  objectpanel.h  tank.h  wall.h
